[UPDATED] Ekata Units: Distribution Script [UPDATED] Ekata Units: Next Release Admin

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -596,7 +596,7 @@
     profilePieChart.Doughnut(profilePieData, pieOptions);
     //var next_release = moment.tz("{{ request.user.useraccount.next_release|date:"Y/m/d H:i" }}", moment.tz.guess());
     //var next_release = moment.utc('{{ request.user.useraccount.next_release|date:"Y/m/d H:i" }}').toDate();
-    var countdown_time = moment('{{ request.user.useraccount.next_release|date:"Y/m/d H:i" }}').format("YYYY/MM/DD HH:mm");
+    var countdown_time = moment('{{ next_release.datetime|date:"Y/m/d H:i" }}').format("YYYY/MM/DD HH:mm");
     $("#releasecountdown").countdown(countdown_time, function(event) {
         $("#day").text(event.strftime('%D'));
         $("#hour").text(event.strftime('%H'));
