--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -61,7 +61,7 @@
                         <div class="community-wrapper">
                             <div class="community" style="background: url('{% static "dist/img/DummyDB.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center 40px;">
                                 <div class="community-name">
-                                    <h4>{% trans "Ekata Units" %} {% if request.user.is_staff %}<a href="{% url 'myaccount:ekata_units_admin' %}"><i class="fa fa-wrench community-admin"></i></a>{% endif %}</h4>
+                                    <h4>{% trans "Ekata Units" %}</h4>
                                 </div>
                                 <div class="community-actions">
                                     {% if request.user.useraccount %}
