minor bug fixes

--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -37,7 +37,7 @@
             <div class="box box-solid" style="min-height: 300px">
                 <div class="box-body">
                     <div class="widget-box text-center">
-                        <h4 class="widget-box-title">{% trans "Ekata Units Admin" %}</h4>
+                        <h4 class="widget-box-title">{% trans "Distribution Info" %}</h4>
                     </div>
                     {% if message %}
                     <div class="widget-box text-center">
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="widget-box">
-                        <h4 class="widget-box-title">{% trans "Total Account To Distribute" %}</h4>
+                        <h4 class="widget-box-title">{% trans "Total Accounts in Distribution" %}</h4>
                         <hr class="widget-box-separator" style="width: 10%">
                         <div class="widget-box-text">
                             <p>{{ total_account }}</p>
@@ -87,7 +87,7 @@
             <div class="box box-solid">
                 <div class="box-body">
                     <div class="widget-box text-center">
-                        <h4 class="widget-box-title">{% trans "Set Next Release" %}</h4>
+                        <h4 class="widget-box-title">{% trans "GRT Dashboard Widget" %}</h4>
                     </div>
                     <div class="widget-box">
                         <div class="widget-box-text" id="nextreleaseformcontainer">
