[FIXED] Sidebar not showing in some pages

--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -261,6 +261,7 @@
             }
         });
     });
+    $(".sidebar-menu-tab>li[data-name='group'").click();
     </script>
     {% endcompress %}
 {% endblock %}
