--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -214,6 +214,7 @@
                 }
             });
         });
+        $(".sidebar-menu-tab>li[data-name='group'").click();
         </script>
     {% endcompress %}
 {% endblock %}
