--- a/templates/publicusers/userdetails.html
+++ b/templates/publicusers/userdetails.html
@@ -407,6 +407,7 @@
                 }
             });
         })();
+        $(".sidebar-menu-tab>li[data-name='community'").click();
     </script>
     {% endcompress %}
 {% endblock extrascripts %}
