Switched Ekata Units references to GRT

--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -4,16 +4,16 @@
 
 {% endblock extrastyle %}
 {% block title %}
-    {% trans "Ekata Units Admin" %}
+    {% trans "Gratcoin Distribution" %}
 {% endblock title %}
 {% block content_header_new %}
     <section class="content-header-new no-search-bar">
         <div class="col-md-4">
             <h1>
-                {% trans "Ekata Units Admin" %}<br>
+                {% trans "Gratcoin Distribution" %}<br>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#">{% trans "Ekata Units Admin" %}</a></li>
+                <li><a href="#">{% trans "Gratcoin Distribution" %}</a></li>
             </ol>
         </div>
         {% comment %}
