--- a/templates/useraccount/ekataunitsinfo.html
+++ b/templates/useraccount/ekataunitsinfo.html
@@ -2,7 +2,7 @@
 <div class="col-md-6">
     <div class="box box-solid" style="min-height: 300px">
         <div class="box-header with-border">
-            <h3 class="box-title">{% trans "Ekata Units" %}</h3>
+            <h3 class="box-title">Grantcoin</h3>
         </div>
         <div class="box-body">
             {% if message %}
