Some minor text change

--- a/templates/groupsystem/groupdetails.html
+++ b/templates/groupsystem/groupdetails.html
@@ -49,7 +49,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="box box-widget widget-user">
-                <div class="widget-user-header bg-black" style="background: url('{{ group.header_image.url }}'); background-size: 345px 120px; background-repeat:no-repeat">
+                <div class="widget-user-header bg-black" style="background: url('{{ group.header_image.url }}'); background-size: cover; background-repeat:no-repeat">
                     <h3 class="widget-user-username">{{ group.name }}</h3>
                     <h5 class="widget-user-desc">
                         {% ifequal group.group_type '9' %}
