[FIXED] Syntax error

--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -261,7 +261,7 @@
             }
         });
     });
-    $(".sidebar-menu-tab>li[data-name='group'").click();
+    $(".sidebar-menu-tab>li[data-name='group']").click();
     </script>
     {% endcompress %}
 {% endblock %}
