--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -258,7 +258,7 @@
                 $("#signupboxbody").load('{% url 'autosignup:filter_signup' %}?sfilter=' + sfilter);
             }
         });
-        $(".sidebar-menu-tab>li[data-name='group'").click();
+        $(".sidebar-menu-tab>li[data-name='group']").click();
     </script>
     {% endcompress %}
 {% endblock %}
