--- a/templates/publicusers/userdetails.html
+++ b/templates/publicusers/userdetails.html
@@ -329,7 +329,7 @@
                 }
             });
         })();
-        $(".sidebar-menu-tab>li[data-name='community'").click();
+        $(".sidebar-menu-tab>li[data-name='community']").click();
     </script>
     {% endcompress %}
 {% endblock extrascripts %}
