--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -292,7 +292,7 @@
             $("#minute").text(event.strftime('%M'));
         });
         {% endif %}
-        $(".sidebar-menu-tab>li[data-name='group'").click();
+        $(".sidebar-menu-tab>li[data-name='group']").click();
         </script>
     {% endcompress %}
 {% endblock %}
