[ADDED] Confirmation on units transfer [CHANGED] Position of balance in units info

--- a/templates/useraccount/transferform.html
+++ b/templates/useraccount/transferform.html
@@ -4,6 +4,6 @@
     {{ form|as_bootstrap }}
 </form>
 {% endif %}
-<div class="boxcontent-submitbtn newbtn" id="transfersubmit">
+<div class="boxcontent-submitbtn newbtn" id="transferconfirm">
     <p>{% trans "Submit" %}</p>
 </div>
