--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -188,6 +188,23 @@
       </div>
     </div>
   </div>
+  <div class="modal fade" id="transferConfirmModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">{% trans "Confirm Transfer" %}</h4>
+        </div>
+        <div class="modal-body">
+          <p id="confirmText"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "No" %}</button>
+          <button type="button" class="btn btn-primary" id="transfersubmit">{% trans "Yes" %}</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
 {% block extrascripts %}
 <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
@@ -351,7 +368,14 @@
             }
         });
     });
+    $(document).on('click', '#transferconfirm', function(){
+        var amount = $("#id_units").val();
+        var to_user = $("#id_reciever").val();
+        $("#confirmText").text('Transfer ' + amount + ' to ' + to_user + '?');
+        $("#transferConfirmModal").modal('show');
+    });
     $(document).on('click', '#transfersubmit', function () {
+        $("#transferConfirmModal").modal('hide');
         var frm = $("#transferform");
         $.ajax({
             url: frm.attr('action'),
