--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -114,6 +114,13 @@
                 </a>
             </li>
         {% endifequal %}
+        {% ifequal notification.notification_type 14 %}
+            <li class="notification" data-id="{{ notification.id }}">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
+                    <i class="fa fa-arrow-down text-orange"></i> {{ notification.amount }} {% trans "GRT distributed to your account" %}
+                </a>
+            </li>
+        {% endifequal %}
     {% endfor %}
         </ul>
     </li>
