--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -218,8 +218,8 @@
                                     <td>{{ lastdistribution.id }}</td>
                                     <td>{{ lastdistribution.start_time|date:'Y/m/d h:i' }}</td>
                                     <td>{{ lastdistribution.end_time|date:'Y/m/d h:i' }}</td>
-                                    <td>{{ lastdistribution.total_amount }}</td>
-                                    <td>{{ lastdistribution.amount_per_user }}</td>
+                                    <td>{{ lastdistribution.total_amount|floatformat:8 }}</td>
+                                    <td>{{ lastdistribution.amount_per_user|floatformat:8 }}</td>
                                     <td>{{ lastdistribution.no_of_accout }}</td>
                                     <td>
                                         {% if lastdistribution.log_file_path %}
